--- a/src/com/raven/crud/ProductosAgregarBaseDatos.form
+++ b/src/com/raven/crud/ProductosAgregarBaseDatos.form
@@ -21,7 +21,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel4" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
                   <Component id="jLabel12" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
@@ -35,21 +35,23 @@
                   <Component id="jLabel2" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
                   <Component id="jLabel8" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
                   <Component id="jLabel3" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
+                  <Component id="jLabel14" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jTextFieldContenido" alignment="0" pref="255" max="32767" attributes="0"/>
+                  <Component id="jTextFieldContenido" alignment="0" pref="253" max="32767" attributes="0"/>
                   <Component id="jFormattedTextFieldFecha" alignment="0" max="32767" attributes="0"/>
-                  <Component id="jTextFieldCodigoProducto" alignment="0" pref="255" max="32767" attributes="0"/>
+                  <Component id="jTextFieldCodigoProducto" alignment="0" pref="253" max="32767" attributes="0"/>
                   <Component id="jTextFieldTipoProducto" alignment="0" max="32767" attributes="0"/>
                   <Component id="jComboBoxProveedor" alignment="0" max="32767" attributes="0"/>
                   <Component id="jTextFieldStock" alignment="0" max="32767" attributes="0"/>
                   <Component id="jFormattedTextFieldPrecioCosto" alignment="0" max="32767" attributes="0"/>
                   <Component id="jFormattedTextFieldPrecioVenta" alignment="0" max="32767" attributes="0"/>
                   <Component id="jTextFieldMarca" alignment="0" max="32767" attributes="0"/>
-                  <Component id="jTextFieldVariedad" alignment="0" pref="255" max="32767" attributes="0"/>
+                  <Component id="jTextFieldVariedad" alignment="0" pref="253" max="32767" attributes="0"/>
                   <Component id="jTextFieldNombre" alignment="0" max="32767" attributes="0"/>
                   <Component id="jScrollPane1" alignment="0" max="32767" attributes="0"/>
+                  <Component id="jPanel1" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="50" pref="50" max="-2" attributes="0"/>
           </Group>
@@ -58,7 +60,7 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jTextFieldNombre" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -115,10 +117,15 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabel14" min="-2" max="-2" attributes="0"/>
+                  <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
+                  <Component id="jScrollPane1" min="-2" pref="50" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -274,5 +281,26 @@
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
     </Component>
+    <Component class="javax.swing.JLabel" name="jLabel14">
+      <Properties>
+        <Property name="horizontalAlignment" type="int" value="11"/>
+        <Property name="text" type="java.lang.String" value="Imagen producto"/>
+      </Properties>
+    </Component>
+    <Container class="javax.swing.JPanel" name="jPanel1">
+
+      <Layout>
+        <DimensionLayout dim="0">
+          <Group type="103" groupAlignment="0" attributes="0">
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+          </Group>
+        </DimensionLayout>
+        <DimensionLayout dim="1">
+          <Group type="103" groupAlignment="0" attributes="0">
+              <EmptySpace min="0" pref="60" max="32767" attributes="0"/>
+          </Group>
+        </DimensionLayout>
+      </Layout>
+    </Container>
   </SubComponents>
 </Form>
