--- a/src/com/raven/crud/ProductosAgregarBaseDatos.form
+++ b/src/com/raven/crud/ProductosAgregarBaseDatos.form
@@ -51,7 +51,7 @@
                   <Component id="jTextFieldVariedad" alignment="0" pref="253" max="32767" attributes="0"/>
                   <Component id="jTextFieldNombre" alignment="0" max="32767" attributes="0"/>
                   <Component id="jScrollPane1" alignment="0" max="32767" attributes="0"/>
-                  <Component id="jPanel1" max="32767" attributes="0"/>
+                  <Component id="jPanelImagenProducto" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="50" pref="50" max="-2" attributes="0"/>
           </Group>
@@ -118,7 +118,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel14" min="-2" max="-2" attributes="0"/>
-                  <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
+                  <Component id="jPanelImagenProducto" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -287,7 +287,7 @@
         <Property name="text" type="java.lang.String" value="Imagen producto"/>
       </Properties>
     </Component>
-    <Container class="javax.swing.JPanel" name="jPanel1">
+    <Container class="javax.swing.JPanel" name="jPanelImagenProducto">
 
       <Layout>
         <DimensionLayout dim="0">
