--- a/src/com/raven/form/Productos_Form.form
+++ b/src/com/raven/form/Productos_Form.form
@@ -46,6 +46,8 @@
                       <Group type="102" attributes="0">
                           <Component id="jTextField" min="-2" pref="200" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
+                          <Component id="jButtonVer" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="jButton3" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="jButton2" min="-2" max="-2" attributes="0"/>
@@ -68,6 +70,7 @@
                       <Component id="jButton2" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jButton3" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jButtonVer" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jScrollPane" pref="366" max="32767" attributes="0"/>
@@ -87,21 +90,20 @@
             <Component class="javax.swing.JTable" name="jTable">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="16" rowCount="0">
+                  <Table columnCount="15" rowCount="0">
                     <Column editable="true" title="Estado" type="java.lang.Boolean"/>
                     <Column editable="false" title="#" type="java.lang.Object"/>
-                    <Column editable="false" title="Nombre" type="java.lang.Object"/>
-                    <Column editable="false" title="Fecha" type="java.lang.Object"/>
-                    <Column editable="false" title="Contenido" type="java.lang.Object"/>
-                    <Column editable="false" title="Codigo producto" type="java.lang.Object"/>
                     <Column editable="false" title="Variedad" type="java.lang.Object"/>
-                    <Column editable="false" title="Precio costo" type="java.lang.Object"/>
-                    <Column editable="false" title="Precio venta" type="java.lang.Object"/>
-                    <Column editable="false" title="Stock" type="java.lang.Integer"/>
-                    <Column editable="false" title="Porcentaje Ganancia" type="java.lang.Object"/>
-                    <Column editable="false" title="Ganancias" type="java.lang.Object"/>
+                    <Column editable="false" title="Nombre" type="java.lang.Object"/>
+                    <Column editable="false" title="Fecha ingreso" type="java.lang.Object"/>
                     <Column editable="false" title="Marca" type="java.lang.Object"/>
                     <Column editable="false" title="Tipo producto" type="java.lang.Object"/>
+                    <Column editable="false" title="Contenido" type="java.lang.Object"/>
+                    <Column editable="false" title="Stock" type="java.lang.Integer"/>
+                    <Column editable="false" title="Precio costo" type="java.lang.Object"/>
+                    <Column editable="false" title="Precio venta" type="java.lang.Object"/>
+                    <Column editable="false" title="Ganancias" type="java.lang.Object"/>
+                    <Column editable="false" title="Porcentaje Ganancia" type="java.lang.Object"/>
                     <Column editable="false" title="Proveedor" type="java.lang.Object"/>
                     <Column editable="false" title="Descripcion" type="java.lang.Object"/>
                   </Table>
@@ -114,11 +116,6 @@
                       <Renderer/>
                     </Column>
                     <Column maxWidth="50" minWidth="-1" prefWidth="-1" resizable="true">
-                      <Title/>
-                      <Editor/>
-                      <Renderer/>
-                    </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                       <Title/>
                       <Editor/>
                       <Renderer/>
@@ -221,6 +218,14 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Ingrese el nombre del producto"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="jButtonVer">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Ver"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonVerActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
